use pro instead of Maven add modules use JUnit5 instead of JUnit 4 use JDK 15